--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,46 @@
 Package: modEvA
 Type: Package
 Title: Model Evaluation and Analysis
-Version: 2.0
-Date: 2020-01-21
-Author: Barbosa A.M., Brown J.A., Jimenez-Valverde A., Real R.
+Version: 3.36
+Date: 2025-06-09
+Authors@R: c(person(given = c("A.", "Marcia"),
+                      family = "Barbosa",
+                      role = c("aut", "cre"),
+                      email = "ana.marcia.barbosa@gmail.com"),
+               person(given = "Jennifer A.",
+                      family = "Brown",
+                      role = "aut"),
+               person(given = "Alberto",
+                      family = "Jimenez-Valverde",
+                      role = "aut"),
+               person(given = "Raimundo",
+                      family = "Real",
+                      role = "aut"),
+               person(given = "Oswald",
+                      family = c("van", "Ginkel"),
+                      role = "ctb"),
+               person(given = "Jurica",
+                      family = "Levatic",
+                      role = "ctb"),
+               person(given = "Victoria",
+                      family = "Formoso-Freire",
+                      role = "ctb"),
+               person(given = "Andres",
+                      family = "Baselga",
+                      role = "ctb"),
+               person(given = "Carola",
+                      family = "Gomez-Rodriguez",
+                      role = "ctb"),
+               person(given = c("Jose", "Carlos"),
+                      family = "Guerrero",
+                      role = "fnd"))
 Maintainer: A. Marcia Barbosa <ana.marcia.barbosa@gmail.com>
 Imports: graphics,
-         stats
-Description: Analyses species distribution models and evaluates their performance. It includes functions for performing variation partitioning, calculating several measures of model discrimination and calibration, optimizing prediction thresholds based on a number of criteria, performing multivariate environmental similarity surface (MESS) analysis, and displaying various analytical plots.
+         grDevices,
+         stats,
+         methods,
+         terra (> 1.5-50)
+Description: Analyses species distribution models and evaluates their performance. It includes functions for variation partitioning, extracting variable importance, computing several metrics of model discrimination and calibration performance, optimizing prediction thresholds based on a number of criteria, performing multivariate environmental similarity surface (MESS) analysis, and displaying various analytical plots. Initially described in Barbosa et al. (2013) <doi:10.1111/ddi.12100>.
 LazyLoad: yes
 LazyData: yes
 License: GPL-3
