--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,24 @@
 exportPattern("^[[:alpha:]]+")
-importFrom("graphics", "abline", "barplot", "hist", "legend", "lines", "mtext", "par",
-           "plot", "points", "polygon", "rect", "text")
-importFrom("stats", "approx", "approxfun", "binomial", "complete.cases", "cor", "density", "family",
-           "glm", "integrate", "logLik", "median", "na.omit", "pchisq", "qf",
-           "quantile", "resid", "xtabs")
 
+importFrom("graphics",
+           "abline", "arrows", "axis", "barplot", "box", "boxplot", "hist", 
+           "legend", "lines", "mtext", "par", "plot", "plot.default", "points", 
+           "polygon", "rect", "text")
+
+importFrom("grDevices",
+           "adjustcolor", "rgb")
+
+importFrom("methods",
+           "is")
+
+importFrom("stats",
+           "aggregate", "approx", "approxfun", "as.formula", "binomial",
+           "complete.cases", "cor", "density", "family", "glm", "integrate",
+           "lm", "logLik", "median", "na.omit", "pchisq", "qf", "quantile",
+           "qnorm", "resid", "sd", "xtabs", "fitted", "predict")
+
+importFrom("terra",
+           "nlyr", "rasterize", "values")
+
+importFrom("utils",
+           "combn")
